--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample HTML Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sample HTML Page</title>
+  <link rel="stylesheet" href="style.css"> 
+  <script src="main.js"></script> 
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a simple HTML page.</p>
+  <h1 class="heading">Hello, World!</h1> <p>This is a simple HTML page.</p>
 
-    <img src="https://via.placeholder.com/200" alt="Placeholder Image">
+  <img src="https://via.placeholder.com/200" alt="Placeholder Image">
 
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+  </ul>
 
-    <a href="https://www.example.com">Link to Example Website</a>
-</body>
+  <a href="https://www.example.com">Link to Example Website</a>
+
+  <button id="changeColor">Change Color</button> </body>
 </html>
